--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
+    "@headlessui/react": "^1.7.17",
     "@nanostores/query": "^0.2.4",
     "@nanostores/react": "^0.7.1",
     "@types/react": "^18.0.21",
@@ -21,6 +22,7 @@
     "nanostores": "^0.9.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.46.2",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
