--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@nanostores/react": "^0.7.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "ag-grid-community": "^30.1.0",
+    "ag-grid-enterprise": "^30.1.0",
+    "ag-grid-react": "^30.1.0",
     "astro": "^3.0.10",
     "clsx": "^2.0.0",
     "nanostores": "^0.9.3",
