integrate supabase postgres and drizzle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,11 @@
-{}
+{
+    "sqltools.useNodeRuntime": true,
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "testDB",
+            "database": "${workspaceFolder:dr-chen-questionnaire}/testDB.sqlite3"
+        }
+    ]
+}
