set up trpc and react query integration

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@headlessui/react": "^1.7.17",
         "@nanostores/query": "^0.2.4",
         "@nanostores/react": "^0.7.1",
+        "@tanstack/react-query": "^4.36.1",
         "@trpc/client": "^10.41.0",
+        "@trpc/react-query": "^10.41.0",
         "@trpc/server": "^10.41.0",
         "@types/node": "^20.8.7",
         "@types/react": "^18.0.21",
