--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@astrojs/tailwind": "^5.0.0",
         "@astrojs/vercel": "^5.0.2",
         "@headlessui/react": "^1.7.17",
+        "@hookform/resolvers": "^3.3.2",
         "@nanostores/query": "^0.2.4",
         "@nanostores/react": "^0.7.1",
         "@tanstack/react-query": "^4.36.1",
@@ -36,8 +37,10 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-hook-form": "^7.46.2",
+        "react-hot-toast": "^2.4.1",
+        "superjson": "^2.1.0",
         "tailwindcss": "^3.0.24",
-        "zod": "^3.22.4"
+        "zod": "3.21.4"
     },
     "devDependencies": {
         "drizzle-kit": "^0.19.13",
