--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@astrojs/react": "^3.0.1",
         "@astrojs/tailwind": "^5.0.0",
         "@astrojs/vercel": "^5.0.2",
+        "@aws-sdk/client-s3": "^3.435.0",
         "@headlessui/react": "^1.7.17",
         "@hookform/resolvers": "^3.3.2",
         "@nanostores/query": "^0.2.4",
