implement file uploading

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@astrojs/tailwind": "^5.0.0",
         "@astrojs/vercel": "^5.0.2",
         "@aws-sdk/client-s3": "^3.435.0",
+        "@aws-sdk/s3-request-presigner": "^3.435.0",
         "@headlessui/react": "^1.7.17",
         "@hookform/resolvers": "^3.3.2",
         "@nanostores/query": "^0.2.4",
@@ -30,6 +31,7 @@
         "ag-grid-enterprise": "^30.1.0",
         "ag-grid-react": "^30.1.0",
         "astro": "^3.3.2",
+        "axios": "^1.5.1",
         "clsx": "^2.0.0",
         "drizzle-orm": "^0.28.6",
         "drizzle-zod": "^0.5.1",
@@ -41,9 +43,11 @@
         "react-hot-toast": "^2.4.1",
         "superjson": "^2.1.0",
         "tailwindcss": "^3.0.24",
+        "uuid": "^9.0.1",
         "zod": "3.21.4"
     },
     "devDependencies": {
+        "@types/uuid": "^9.0.6",
         "drizzle-kit": "^0.19.13",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4"
