--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "clsx": "^2.0.0",
         "drizzle-orm": "^0.28.6",
         "drizzle-zod": "^0.5.1",
+        "jsonwebtoken": "^9.0.2",
         "nanostores": "^0.9.3",
         "postgres": "^3.4.0",
         "react": "^18.0.0",
@@ -47,6 +48,7 @@
         "zod": "3.21.4"
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.4",
         "@types/uuid": "^9.0.6",
         "drizzle-kit": "^0.19.13",
         "prettier": "^3.0.3",
