--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@astrojs/vercel": "^5.0.2",
         "@aws-sdk/client-s3": "^3.435.0",
         "@aws-sdk/s3-request-presigner": "^3.435.0",
+        "@gradio/client": "^0.7.2",
         "@headlessui/react": "^1.7.17",
         "@hookform/resolvers": "^3.3.2",
         "@nanostores/query": "^0.2.4",
