--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "clsx": "^2.0.0",
         "drizzle-orm": "^0.28.6",
         "drizzle-zod": "^0.5.1",
+        "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "nanostores": "^0.9.3",
         "postgres": "^3.4.0",
@@ -44,12 +45,16 @@
         "react-hook-form": "^7.46.2",
         "react-hot-toast": "^2.4.1",
         "superjson": "^2.1.0",
+        "swagger-ui-express": "^5.0.0",
         "tailwindcss": "^3.0.24",
+        "trpc-openapi": "^1.2.0",
         "uuid": "^9.0.1",
         "zod": "3.21.4"
     },
     "devDependencies": {
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.6",
         "drizzle-kit": "^0.19.13",
         "prettier": "^3.0.3",
